# stm32-debug-bridge

./: .clang-tidy  .gitmodules  CMakeLists.txt  build_all_variants.sh  default.cmake  toolchain.cmake
include/: cdc_payload.h  device-shell.h  djm.h  empty-commads.h  fifo.h  flash.h  global_resources.h  gpio.h  jtag.h  shell.h  static_map.h  systick-wait.h  usb.h  usb_callbacks.h  usb_cdc.h  usb_descriptors.h  usb_std.h
include/clocks/: f1_hse8_ahb72.h
platform/bluepill/: config.cmake  config.h
platform/malina/: config.cmake  config.h  malina-commands.h
platform/stlink-v2-dupboot/: config.cmake  config.h
src/: STM32F103XB_FLASH.ld  flash.cpp  global_resources.cpp  gpio.cpp  jtag.cpp  linker.ld.in  main.cpp  shell.cpp  startup-stm32f103.cpp  startup.cpp  uart.cpp  usb.cpp  usb_descriptors.cpp
tests/: CMakeLists.txt  fifo.cpp  fifo2.cpp  fifo3.cpp  shell.cpp  static_map.cpp
